Updating kaobook class to latest github version

--- a/master.tex
+++ b/master.tex
@@ -7,7 +7,7 @@ twoside=true, % Use different layouts for even and odd pages (in particular, if 
 numbers=noenddot, % Comment to output dots after chapter numbers; the most common values for this option are: enddot, noenddot and auto (see the KOMAScript documentation for an in-depth explanation)
 %draft=true, % If uncommented, rulers will be added in the header and footer
 %overfullrule=true, % If uncommented, overly long lines will be marked by a black box; useful for correcting spacing problems
-]{kaobook}
+]{kaobook} 
 
 %%%% set to 1 to add 1st Author Publications in the manuscript
 \def\addpublications{0}
@@ -103,7 +103,7 @@ numbers=noenddot, % Comment to output dots after chapter numbers; the most commo
 \usepackage[sorting=none,
 			sortcites=true,
 			citestyle=numeric-comp,
-			bibstyle=authoryear]{styles/kaobiblio}
+			bibstyle=authoryear]{kaobiblio}
 % Bibliography files
 \addbibresource{references.bib}
 
