--- a/kao.sty
+++ b/kao.sty
@@ -1,4 +1,4 @@
-\ProvidesPackage{styles/kao}
+\ProvidesPackage{kao}
 
 %----------------------------------------------------------------------------------------
 %	USEFUL PACKAGES AND COMMANDS
@@ -17,6 +17,12 @@
 \RequirePackage{imakeidx} % For the index; must be loaded before the 'caption' and 'hyperref' packages
 \RequirePackage{varioref} % For the cross-references; must be loaded before the 'hyperref' and 'cleveref' packages
 
+% Define \Ifthispageodd (with a capital 'i') to make kaobook compatible with older KOMAScript versions
+\@ifpackagelater{scrbase}{2019/12/22}{%
+}{%
+    \let\Ifthispageodd\ifthispageodd%
+}
+
 %----------------------------------------------------------------------------------------
 %	TITLE AND AUTHOR MACROS
 %----------------------------------------------------------------------------------------
@@ -24,7 +30,7 @@
 % Provide an optional argument to the \title command in which to store a plain text title, without any formatting
 % Usage: \title[Plain Title]{Actual Title}
 \newcommand{\@plaintitle}{}
-\renewcommand{\title}[2][]{
+\renewcommand{\title}[2][]{%
 	\gdef\@title{#2} % Store the full title in @title
 	\ifthenelse{\isempty{#1}}{ % If there is no plain title
 		\renewcommand{\@plaintitle}{\@title} % Use full title
@@ -37,7 +43,7 @@
 % Provide an optional argument to the \author command in which to store a plain text author, without any formatting
 % Usage: \author[Plain Author]{Actual Author}
 \newcommand{\@plainauthor}{}
-\renewcommand{\author}[2][]{
+\renewcommand{\author}[2][]{%
 	\gdef\@author{#2} % Store the full author in @author
 	\ifthenelse{\isempty{#1}}{ % If there is no plain author
 		\renewcommand{\@plainauthor}{\@author}% Use full author
@@ -133,9 +139,10 @@
 		bottom=27.4\vscale,
 		inner=24.8\hscale,
 		textwidth=107\hscale,
-		marginparsep=8.2\hscale,
-		marginparwidth=49.4\hscale,
-	}%
+        marginparsep=6.2\hscale,
+		marginparwidth=47.7\hscale,
+    }%
+    \recalchead%
 }
 
 % Layout #2: small, symmetric margins
@@ -148,6 +155,7 @@
 		marginparsep=0mm,
 		marginparwidth=0mm,
 	}%
+    \recalchead%
 }
 
 % Layout #3: no margins and no space above or below the body
@@ -160,6 +168,7 @@
 		marginparwidth=0mm,
 		marginparsep=0mm,
 	}%
+    \recalchead%
 }
 
 % Set the default page layout
@@ -181,18 +190,21 @@
 \newlength{\headmarginparsep}
 \newlength{\headmarginparwidth}
 \newlength{\headtotal} % This is the total width of the header
-
-\AtBeginDocument{% Recalculate the header-related lengths
-	\setlength{\headtextwidth}{\textwidth}%
+\newcommand{\recalchead}{%
+    \setlength{\headtextwidth}{\textwidth}%
 	\setlength{\headmarginparsep}{\marginparsep}%
 	\setlength{\headmarginparwidth}{\marginparwidth}%
 	\setlength{\headtotal}{\headtextwidth+\headmarginparsep+\headmarginparwidth}%
 }
 
+\AtBeginDocument{% Recalculate the header-related lengths
+    \recalchead%
+}
+
 % Style with chapter number, chapter title, and page in the header (used throughout the document)
 \renewpagestyle{scrheadings}{%
-	{\smash{\hspace{-\headmarginparwidth}\hspace{-\headmarginparsep}\makebox[\headtotal][l]{%
-		\makebox[7\hscale][r]{\thepage}%
+    {\smash{\hspace{-\headmarginparwidth}\hspace{-\headmarginparsep}\makebox[\headtotal][l]{%
+        \makebox[7\hscale][r]{\thepage}%
 		\makebox[3\hscale]{}\rule[-1mm]{0.5pt}{19\vscale-1mm}\makebox[3\hscale]{}%
 		\makebox[\headtextwidth][l]{\leftmark}}}}%
 	{\smash{\makebox[0pt][l]{\makebox[\headtotal][r]{%
@@ -204,7 +216,7 @@
 		\makebox[3\hscale]{}\rule[-1mm]{0.5pt}{19\vscale-1mm}\makebox[3\hscale]{}%
 		\makebox[7\hscale][l]{\thepage}}}}}%
 }{%
-	{}%
+    {}%
 	{}%
 	{}%
 }
@@ -222,13 +234,24 @@
 
 % Style with an empty header and the page number in the footer
 \newpagestyle{pagenum.scrheadings}{%
-	{}%
-	{}%
-	{}%
+    {}%
+    {}%
+    {}%
 }{%
-	{\thepage}%
-	{\hfill\thepage}%
-	{}%
+    {\makebox[\textwidth][r]{\thepage}}%
+    {\makebox[\textwidth][l]{\thepage}}%
+    {\makebox[\textwidth][l]{\thepage}}%
+}
+
+% Style with an empty header and the page number in the footer
+\newpagestyle{centeredpagenum.scrheadings}{%
+    {}%
+    {}%
+    {}%
+}{%
+    {\hspace{-\headmarginparwidth}\hspace{-\headmarginparsep}\makebox[\headtotal][l]{\hfill\thepage\hfill}}
+    {\makebox[0pt][l]{\makebox[\headtotal][r]{\hfill\thepage\hfill}}}%
+    {\makebox[0pt][l]{\makebox[\headtotal][r]{\hfill\thepage\hfill}}}%
 }
 
 % Command to print a blank page
@@ -297,6 +320,21 @@
 	\end{addmargin}%
 }
 
+% Environment for a full width paragraph
+\NewDocumentEnvironment{fullwidthpar}{}{%
+  \if@twoside%
+    \Ifthispageodd{%
+      \begin{addmargin}[-1in-\hoffset-\oddsidemargin]{-\paperwidth+1in+\hoffset+\oddsidemargin+\textwidth}%
+    }{%
+      \begin{addmargin}[-\paperwidth+1in+\hoffset+\oddsidemargin+\textwidth]{-\paperwidth+1in+\hoffset+\oddsidemargin+\marginparsep+\marginparwidth+\textwidth}%
+    }%
+  \else%
+    \begin{addmargin}[-1in-\hoffset-\oddsidemargin]{-\paperwidth+1in+\hoffset+\oddsidemargin+\textwidth}%
+  \fi% 
+}{%
+    \end{addmargin}%
+}
+
 % Environment for a wide equation
 \NewDocumentEnvironment{wideequation}{}{%
   \begin{widepar}%
@@ -343,7 +381,9 @@
 \renewcommand*{\raggedleftmarginnote}{} % Suppress left margin
 \renewcommand*{\raggedrightmarginnote}{} % Suppress right margin
 \renewcommand*{\marginfont}{\@margin@par} % Format marginnotes according to \@marginpar (see above)
-\renewcommand{\marginnotevadjust}{0.7\vscale} % Bring all marginnotes downward a bit
+\renewcommand{\marginnotevadjust}{0.8\vscale} % Bring all marginnotes downwards a bit
+\marginposadjustment=0.1mm % Bring downwards also the marginpars
+\marginheightadjustment=.5cm % Bring downwards also the marginpars
 %\RequirePackage[marginnote=true]{snotez} % Provides options for sidenotes
 
 % Copied from snotez's \sidenote
@@ -361,11 +401,11 @@
 \AtBeginEnvironment{minipage}{\infloattrue}
 
 \def\IfInFloatingEnvir{%
-	\ifinfloat
-		\expandafter\@firstoftwo
-	\else
-		\expandafter\@secondoftwo
-	\fi
+    \ifinfloat%
+        \expandafter\@firstoftwo%
+    \else%
+        \expandafter\@secondoftwo%
+    \fi%
 }
 
 
@@ -374,28 +414,15 @@
 % (b) the offset can also be a multiple of baselineskip, like for snotez's \sidenote
 % Usage: \marginnote[<offset>]{Text of the note.}
 \let\oldmarginnote\marginnote%
-\RenewDocumentCommand\marginnote { o m }{%
+\RenewDocumentCommand\marginnote{ o m }{%
 	\IfNoValueOrEmptyTF{#1}{%
 		\IfInFloatingEnvir{%
 			\oldmarginnote{#2}%
 		}{%
-			\marginpar{\@margin@par#2}%
-		}%
+            \marginpar{\@margin@par#2}%
+        }%
 	}{%
 		\oldmarginnote{#2}[\kao@if@nblskip{#1}{\@cdr#1\@nil\baselineskip}{#1}]%
-	}%
-}
-
-% Redefine the following sidenotes' command to use the kao version of marginnote
-\RenewDocumentCommand\@sidenotes@placemarginal{ m m }{%
-	\IfNoValueOrEmptyTF{#1}{%
-		\IfInFloatingEnvir{%
-			\oldmarginnote{#2}%
-		}{%
-			\marginpar{#2}%
-		}%
-	}{%
-		\marginnote[#1]{#2}%
 	}%
 }
 
@@ -419,7 +446,7 @@
 % }
 
 % Formatting sidenotes
-\RenewDocumentCommand \@sidenotes@thesidenotemark { m }{%
+\RenewDocumentCommand\@sidenotes@thesidenotemark{ m }{%
 	\leavevmode%
 	\ifhmode%
 		\edef\@x@sf{\the\spacefactor}%
@@ -434,10 +461,10 @@
 
 \RenewDocumentCommand\sidenotetext{ o o +m }{% number, offset, text
 	\IfNoValueOrEmptyTF{#1}{%
-		\@sidenotes@placemarginal{#2}{\@margin@par\thesidenote:\enskip#3}%
-	}{%
-		\@sidenotes@placemarginal{#2}{\@margin@par#1:\enskip#3}%
-	}%
+        \marginnote[#2]{\thesidenote:\enskip#3}%
+    }{%
+        \marginnote[#2]{#1:\enskip#3}%
+    }%
 }
 
 %----------------------------------------------------------------------------------------
@@ -447,6 +474,7 @@
 \RequirePackage{graphicx} % Include figures
 \setkeys{Gin}{width=\linewidth,totalheight=\textheight,keepaspectratio} % Improves figure scaling
 \RequirePackage{tikz} % Allows to draw custom shapes
+\RequirePackage{tikzpagenodes} % Allows to anchor tikz nodes to page elements
 \RequirePackage{booktabs} % Nicer tables
 \RequirePackage{multirow} % Cells occupying multiple rows in tables
 \RequirePackage{multicol} % Multiple columns in dictionary
@@ -454,13 +482,13 @@
 \RequirePackage{listings} % Print code listings
 %\RequirePackage{minted}
 \RequirePackage[hypcap=true]{caption} % Correctly placed anchors for hyperlinks
-\RequirePackage{scrhack} % Make packages compatible with KOMA Script
 % \RequirePackage{atbegshi}
 % \RequirePackage{perpage}
 \let\c@abspage\relax
 % \newcommand{\pp@g@sidenote}{}
 \RequirePackage{floatrow} % Set up captions of floats
 %\RequirePackage{dblfloatfix} % Better positioning of wide figures and tables
+\AtEndPreamble{\RequirePackage{scrhack}} % Make packages compatible with KOMA Script (must be loaded last: https://tex.stackexchange.com/questions/156240/latex-packages-minted-and-scrhack)
 
 % Improve the figure placing (see https://www.overleaf.com/learn/latex/Tips)
 \def\topfraction{.9}%
@@ -489,7 +517,7 @@
 % Environment to hold a margin figure (from the sidenotes package)
 % We redefine it here because we want to use our own caption formatting.
 \RenewDocumentEnvironment{marginfigure}{o}{%
-  \FloatBarrier
+  \FloatBarrier%
   \marginskip{\kaomarginskipabove}%
   \begin{lrbox}{\@sidenotes@marginfigurebox}%
 	\begin{minipage}{\marginparwidth}%
@@ -503,7 +531,7 @@
 
 % Environment to hold a margin table (from the sidenotes package)
 \RenewDocumentEnvironment{margintable}{o}{%
-  \FloatBarrier
+  \FloatBarrier%
   \marginskip{\kaomarginskipabove}%
   \begin{lrbox}{\@sidenotes@margintablebox}%
 	\begin{minipage}{\marginparwidth}%
@@ -518,7 +546,7 @@
 % Environment to hold a margin listing
 \newsavebox{\@sidenotes@marginlistingbox}%
 \NewDocumentEnvironment{marginlisting}{o}{% The optional parameter is the vertical offset
-  \FloatBarrier
+  \FloatBarrier%
   \marginskip{\kaomarginskipabove}%
   \begin{lrbox}{\@sidenotes@marginlistingbox}%
 	\begin{minipage}{\marginparwidth}%
@@ -673,7 +701,7 @@
 		capbesidesep=marginparsep,%
 		floatwidth=\textwidth,%Width of the figure equal to the width of the text
 	}%
-	\captionsetup[lstlisting]{%
+	\captionsetup*[lstlisting]{%
 		format=llap,%
 		labelsep=space,%
 		singlelinecheck=no,%
@@ -737,7 +765,7 @@
 		capbesidesep=marginparsep,%
 		floatwidth=\textwidth,% Width of the figure equal to the width of the text
 	}%
-	\captionsetup[lstlisting]{%
+	\captionsetup*[lstlisting]{%
 		format=llap,%
 		labelsep=space,%
 		singlelinecheck=no,%
@@ -778,7 +806,7 @@
 		margins=centering,%
 		floatwidth=\textwidth%
 	}
-	\captionsetup[lstlisting]{% Captions style for lstlistings
+	\captionsetup*[lstlisting]{% Captions style for lstlistings
 		%format=margin,%
 		labelsep=colon,%
 		strut=no,%
@@ -795,19 +823,24 @@
 %	TOC, LOF & LOT
 %----------------------------------------------------------------------------------------
 
-\RequirePackage{tocbasic}%
+\RequirePackage{tocbasic}
 
 % Show an entry for the TOC in the TOC
-\setuptoc{toc}{totoc}%
+\setuptoc{toc}{totoc}
 
 % Choose the levels in table of contents
 \setcounter{tocdepth}{\subsectiontocdepth}
 
 % Define the style for toc entries
-\DeclareTOCStyleEntries[indent=0em,numwidth=2em,dynnumwidth=yes,pagenumberwidth=2.1em]{tocline}{figure,table}
-\DeclareTOCStyleEntries[dynnumwidth=yes]{tocline}{subsubsection,subsection,section,chapter,part}
-\DeclareTOCStyleEntries[pagenumberwidth=2.5em]{tocline}{chapter,part}
-\DeclareTOCStyleEntries[pagenumberwidth=2.1em]{tocline}{subsubsection,subsection,section}
+\@ifpackagelater{scrbase}{2019/10/11}{%
+    \DeclareTOCStyleEntries[indent=0em,numwidth=2em,dynnumwidth=yes,pagenumberwidth=2.1em]{tocline}{figure,table}%
+    \DeclareTOCStyleEntries[dynnumwidth=yes]{tocline}{subsubsection,subsection,section,chapter,part}%
+    \DeclareTOCStyleEntries[pagenumberwidth=2.5em]{tocline}{chapter,part}%
+    \DeclareTOCStyleEntries[pagenumberwidth=2.1em]{tocline}{subsubsection,subsection,section}%
+}{%
+    \DeclareTOCStyleEntries[indent=0em,numwidth=2em,dynnumwidth=yes]{tocline}{figure,table}%
+    \DeclareTOCStyleEntries[dynnumwidth=yes]{tocline}{subsubsection,subsection,section,chapter,part}%
+}
 
 % Define the names for the headings
 % \renewcaptionname{english}{\contentsname}{Detailed Contents}
@@ -825,31 +858,141 @@
 \setcounter{margintocdepth}{\subsectiontocdepth}
 
 \newlength{\mtocshift} % Length of the vertical offset used for margin tocs
-\setlength{\mtocshift}{-52\vscale}
+\setlength{\mtocshift}{1\vscale}% \mtocshift is overridden by \setchapterstyle
+
+% Optional title for margintoc (by hCarlFelix, 
+% https://github.com/fmarotta/kaobook/issues/101)
+% We want to create an additional entries in the toc which is to be used for the margintoc
+% We define these as mtocsection and mtocsubsection for section and subsection`
+\newcommand{\mtocsection}[1]{
+    \addcontentsline{toc}{mtocsection}{%
+        \ifnum\value{secnumdepth}>0 \protect\numberline{\thesection}%
+        \else \protect\nonumberline%
+        \fi #1}%
+}
+\newcommand{\mtocsubsection}[1]{
+    \addcontentsline{toc}{mtocsubsection}{%
+        \ifnum\value{secnumdepth}>1 \protect\numberline{\thesubsection}%
+        \else \protect\nonumberline%
+        \fi #1}%
+}
+
+% Next, we redefine \section and \subsection so that they accept an additional parameter
+% \section[alternative-title-for-toc]{title-as-written-in-text}[alternative-title-for-margintoc]
+
+% Adapted from Frank Mittelbach's answer at Stackexchange
+% https://tex.stackexchange.com/a/109560/226693
+\let\oldsection\section  % save the old command
+\let\oldsubsection\subsection  % save the old command
+
+\RenewDocumentCommand\section{s o m o}{%
+    \IfBooleanTF{#1}{%
+        \oldsection*{#3}
+        \IfNoValueF{#2}{% if TOC arg is given create a TOC entry
+            \addxcontentsline{toc}{section}[\thesection]{#2}%
+        }%
+    }{% no star given
+        \IfNoValueTF{#2}{%
+            \oldsection{#3}%
+        }{% no TOC arg
+            \oldsection[#2]{#3}%
+        }%
+        \IfNoValueTF{#4}{% optional label given, if not we do nothing
+            \mtocsection{#3}%
+        }{%
+            \mtocsection{#4}%
+        }%
+    }%
+}
+
+\RenewDocumentCommand\subsection{s o m o}{
+    \IfBooleanTF{#1}{%
+        \oldsubsection*{#3}%
+        \IfNoValueF{#2}{% if TOC arg is given create a TOC entry
+            \addxcontentsline{toc}{subsection}[\thesubsection]{#2}%
+        }%
+    }{% no star given
+        \IfNoValueTF{#2}{%
+            \oldsubsection{#3}%
+        }{% no TOC arg
+            \oldsubsection[#2]{#3}%
+        }%
+        \IfNoValueTF{#4}{% optional label given, if not we do nothing
+            \mtocsubsection{#3}%
+        }{%
+            \mtocsubsection{#4}%
+        }%
+    }%
+}
+
+\etocsetlevel{mtocsection}{6}% dummy sectioning level
+\etocsetlevel{mtocsubsection}{6}% dummy sectioning level
 
 % Command to print a table of contents in the margin
-\newcommand{\margintoc}[1][\mtocshift]{ % The first parameter is the vertical offset; by default it is \mtocshift
-	\begingroup%
-		% Set the style for section entries
-		\etocsetstyle{section}%
-		{\parindent -5pt \parskip 3pt}%
-		{\leftskip 20pt \rightskip 12pt} %
-		{\hspace{0.01cm}\llap{\etocnumber\hspace{0.1cm}}\etocname\nobreak\leaders\hbox{\hbox to 1.5ex {\hss.\hss}}\hfill\makebox[-0.1cm][l]{\etocpage}\par}%	
-		{}%
+\NewDocumentCommand{\margintoc}{O{\mtocshift}}{ % The first parameter is the vertical offset; by default it is \mtocshift
+    \begingroup%
+        % Move regular section and subsection to level 6 so that they won't be included and instead set let the mtoc versions take their place.
+        % Adapted from https://tex.stackexchange.com/a/133559/226693
+        \etocsetlevel{section}{6}
+        \etocsetlevel{subsection}{6}
+        \etocsetlevel{mtocsection}{1}
+        \etocsetlevel{mtocsubsection}{2}
+
+        % Define default widths
+        \def\margintocnumwidth{-.8mm}%
+        \def\margintocpagenumwidth{8pt}%
+        \setlength{\RaggedRightParfillskip}{0pt}
+
+        % Dry run to get the needed widths
+        \etocsetstyle{mtocsection}%
+          {}%
+          {\setbox0\hbox{\usekomafont{section}\small\etocthenumber\kern.8mm}%%
+           \setbox1\hbox{\usekomafont{section}\small\etocthepage}}%
+          {\ifdim\wd0>\margintocnumwidth \edef\margintocnumwidth{\the\wd0} \fi%%
+           \ifdim\wd1>\margintocpagenumwidth \edef\margintocpagenumwidth{\the\wd1} \fi}%
+          {}%
+        \etocsetstyle{mtocsubsection}%
+          {}%
+          {\setbox0\hbox{\usekomafont{section}\small\etocthenumber\kern.8mm}%
+           \setbox1\hbox{\usekomafont{section}\small\etocthepage}}%
+          {\ifdim\wd0>\margintocnumwidth \edef\margintocnumwidth{\the\wd0} \fi%
+           \ifdim\wd1>\margintocpagenumwidth \edef\margintocpagenumwidth{\the\wd1} \fi}%
+          {}%
+        \etocsetstyle{subsubsection}%
+          {}%
+          {}%
+          {}%
+          {}%
+        \etocsetstyle{paragraph}%
+          {}%
+          {}%
+          {}%
+          {}%
+        \etocsettocstyle{}{%
+          \global\let\margintocnumwidth\margintocnumwidth%
+          \global\let\margintocpagenumwidth\margintocpagenumwidth%
+        }%
+        \localtableofcontents%
+
+        % Set the style for section entries
+        \etocsetstyle{mtocsection}%
+        {\parindent 0pt \parskip 2.5pt \parfillskip 0pt \RaggedRight}%
+        {\leftskip \margintocnumwidth \rightskip \margintocpagenumwidth} %
+        {\makebox[0pt][r]{\makebox[\margintocnumwidth][l]{\etocnumber}}\etocname\nobreak\leaders\hbox{\hbox to 1.5ex {\hss.\hss}}\hfill\rlap{\makebox[\margintocpagenumwidth][r]{\etocpage}}\par}%
+        {}%
 		% Set the style for subsection entries
-		\etocsetstyle{subsection}%
-		{\parindent -5pt \parskip 0pt}%
-		{\leftskip 20pt \rightskip 12pt}%
-		{\hspace{0.01cm}\llap{\hspace{0.1cm}}\etocname\nobreak\leaders\hbox{\hbox to 1.5ex {\hss.\hss}}\hfill\makebox[-0.1cm][l]{\etocpage}\par}%
-		{}%
+        \etocsetstyle{mtocsubsection}%
+        {\parindent 0pt \parskip 0pt \parfillskip 0pt \RaggedRight}%
+        {\leftskip \margintocnumwidth \rightskip \margintocpagenumwidth}%
+        {\makebox[0pt][r]{\makebox[\margintocnumwidth][l]{\etocnumber}}\etocname\nobreak\leaders\hbox{\hbox to 1.5ex {\hss.\hss}}\hfill\rlap{\makebox[\margintocpagenumwidth][r]{\etocpage}}\par}%
+        {\parskip 2.5pt}%
 		% Set the global style of the toc
-		%\etocsettocstyle{}{}
-		%\etocsettocstyle{\normalfont\sffamily\normalsize}{}
-		\etocsettocstyle{\usekomafont{section}\small}{}%
+        \etocsettocstyle{\usekomafont{section}\small}{}%
 		\etocsetnexttocdepth{\themargintocdepth}%
-		% Print the table of contents in the margin
-		\marginnote[#1]{\localtableofcontents}%
-	\endgroup%
+        % Print the table of contents in the margin
+        \marginnote[#1]{\localtableofcontents}%
+        \FloatBarrier%
+    \endgroup%
 }
 
 %----------------------------------------------------------------------------------------
@@ -873,7 +1016,7 @@
 	\RequirePackage{amssymb} % Must be loaded before unicode-math
 	\RequirePackage[force]{filehook} % Fixes an error
 	\RequirePackage{unicode-math} % Math fonts in xetexorluatex
-	\setromanfont[
+    \setromanfont[
 		Scale=1.04
 	]{Libertinus Serif}
 	\setsansfont[
@@ -891,11 +1034,11 @@
 	\RequirePackage[utf8]{inputenc} % utf8 encoding in the input (.tex) file
 	\RequirePackage[T1]{fontenc} % utf8 encoding in the output (.pdf) file
 
+	\RequirePackage{amssymb} % Math symbols, including \blacktriangleright, used for bullets
 	\RequirePackage[scaled=.97,helvratio=.93,p,theoremfont]{newpxtext} % Serif palatino font
 	\RequirePackage[vvarbb,smallerops,bigdelims]{newpxmath} % Math palatino font
 	\RequirePackage[scaled=.85]{beramono} % Monospace font
 	\RequirePackage[scr=rsfso,cal=boondoxo]{mathalfa} % Mathcal from STIX, unslanted a bit
-	\RequirePackage{amssymb} % Math symbols, including \blacktriangleright, used for bullets
     \RequirePackage{morewrites} % Fix some errors related to floats
 \fi
 
@@ -927,8 +1070,8 @@
 	colorlinks=true,
 	%allcolors=DarkGreen,
 	citecolor = DarkOrange,
-	linkcolor = DarkBlue,
-	%pagecolor = DarkBlue,
+    linkcolor = Blue,
+    %pagecolor = Blue,
 	urlcolor = OliveGreen,
 }
 
@@ -982,7 +1125,7 @@
 %\addtokomafont{subsection}{\color{Maroon}}
 %\addtokomafont{subsubsection}{\color{Maroon}}
 %\addtokomafont{paragraph}{\color{Maroon}}
-%\addtokomafont{captionlabel}{\color{DarkBlue}}
+%\addtokomafont{captionlabel}{\color{Blue}}
 %\addtokomafont{pagenumber}{\color{Maroon}}
 
 \hypersetup{
@@ -990,7 +1133,7 @@
 	%citecolor=DarkOrange!70!black,
 	citecolor=OliveGreen,
 	filecolor=OliveGreen,
-	%linkcolor=DarkBlue,
+    %linkcolor=Blue,
 	linkcolor=Black,
 	%menucolor=Red,
 	%runcolor=Red,
@@ -998,8 +1141,210 @@
 }
 
 %----------------------------------------------------------------------------------------
-%	INCLUDE ADDITIONAL PACKAGES
+%	ITEMS
 %----------------------------------------------------------------------------------------
 
-\RequirePackage{styles/environments}
-\RequirePackage{styles/packages}
+\renewcommand{\labelitemi}{\small$\blacktriangleright$}
+\renewcommand{\labelitemii}{\textbullet}
+\RequirePackage{enumitem}
+\setlist[itemize]{noitemsep}
+\setlist[enumerate]{noitemsep}
+\setlist[description]{noitemsep}
+
+%----------------------------------------------------------------------------------------
+%	SIMPLE BOXED ENVIRONMENT
+%----------------------------------------------------------------------------------------
+
+% kaobox (while tcolorbox may be more rich, I find it too complicated so I prefer mdframed)
+\RequirePackage{tikz}
+\RequirePackage[framemethod=TikZ]{mdframed}
+
+%\mdfsetup{skipabove=\topskip,skipbelow=0pt}
+\mdfdefinestyle{kaoboxstyle}{
+	skipabove=1.5\topskip,
+	skipbelow=.5\topskip,
+	rightmargin=0pt,
+	leftmargin=0pt,
+	%innertopmargin=3pt,
+	%innerbottommargin=3pt,
+	innerrightmargin=7pt,
+	innerleftmargin=7pt,
+	topline=false,
+	bottomline=false,
+	rightline=false,
+	leftline=false,
+	%linewidth=1pt,
+	%roundcorner=0pt,
+	%font={},
+	%frametitlefont={},
+	frametitlerule=true,
+	linecolor=black,
+	%backgroundcolor=LightBlue,
+	fontcolor=black,
+	%frametitlebackgroundcolor=LightBlue,
+}
+
+\newmdenv[
+	style=kaoboxstyle,
+	backgroundcolor=RoyalBlue!25!White,
+	frametitlebackgroundcolor=RoyalBlue!25!White,
+]{kaobox}
+
+%----------------------------------------------------------------------------------------
+%	ENVIRONMENT WITH A COUNTER
+%----------------------------------------------------------------------------------------
+
+\newenvironment{kaocounter}{
+	\refstepcounter{kaocounter}
+	\begin{kaobox}[frametitle=Comment~\thekaocounter\autodot]
+}{
+	\end{kaobox}
+}
+
+\newcounter{kaocounter}
+\counterwithin{kaocounter}{section}
+\newcommand*{\kaocounterformat}{% Format for the caption
+	Comment~\thekaocounter\csname autodot\endcsname}
+\newcommand*{\fnum@kaocounter}{\kaocounterformat}
+
+
+%----------------------------------------------------------------------------------------
+%	FLOATING ENVIRONMENT WITH TOC ENTRIES
+%----------------------------------------------------------------------------------------
+
+\newenvironment{kaofloating}{%
+	\@float{kaofloating}%
+}{%
+	\end@float%
+}
+
+\newcommand*{\fps@floatingbox}{tbph}
+\newcommand*{\ftype@floatingbox}{5}
+\newcommand*{\floatingboxformat}{%
+	Insight~\thefloatingbox\csname autodot\endcsname}
+\newcommand*{\fnum@floatingbox}{\floatingboxformat}
+\newcommand*{\ext@floatingbox}{loi}
+
+\addtotoclist[float]{loi}
+\newcommand*{\listofloiname}{List of Insights}
+\newcommand*{\l@floatingbox}{\l@figure}
+\newcommand*{\listofinsights}{\listoftoc{loi}}
+
+%----------------------------------------------------------------------------------------
+%	ADDITIONAL PACKAGES
+%----------------------------------------------------------------------------------------
+
+% Productivity
+\RequirePackage{pdfpages} % Insert PDF pages
+\RequirePackage{subfiles} % Adopt a modular structure
+\RequirePackage{todonotes} % Add useful notes in the margins
+
+% Listings code
+\RequirePackage{listings} % Code
+%\RequirePackage{minted}
+
+\definecolor{listingkeywords}{rgb}{0.0, 0.5, 0.0}
+\definecolor{listingidentifiers}{rgb}{0, 0, 0}
+\definecolor{listingcomments}{rgb}{0.25, 0.5, 0.5}
+\definecolor{listingstrings}{rgb}{0.73, 0.13, 0.13}
+\definecolor{listingnumbers}{rgb}{0.25, 0.25, 0.25}
+\lstdefinestyle{kaolst}{
+	aboveskip=0.7\topskip,
+	belowskip=0.1\topskip,
+	basicstyle=\small\ttfamily,
+	commentstyle=\color{listingcomments}\itshape,
+	keywordstyle=\color{listingkeywords}\bfseries,
+	numberstyle=\scriptsize\color{listingnumbers}\ttfamily,
+	stringstyle=\color{listingstrings},
+	identifierstyle=\color{listingidentifiers},
+	backgroundcolor=\color{White},
+	breakatwhitespace=false,
+	breaklines=true,
+	captionpos=t,
+	keepspaces=true,
+	showspaces=false,
+	showstringspaces=false,
+	showtabs=false,
+	numbers=left,
+	numbersep=1em,
+	%frame=lines,
+	frame=l,
+	framerule=.7pt,
+	tabsize=4,
+	defaultdialect=[LaTeX]Tex,
+}
+\lstdefinestyle{kaolstplain}{
+	aboveskip=0.6\topskip,
+	belowskip=-0.1\topskip,
+	basicstyle=\small\ttfamily,
+	commentstyle=\color{listingcomments}\itshape,
+	keywordstyle=\color{listingkeywords}\bfseries,
+	numberstyle=\scriptsize\color{listingnumbers}\ttfamily,
+	stringstyle=\color{listingstrings},
+	identifierstyle=\color{listingidentifiers},
+	backgroundcolor=\color{White},
+	breakatwhitespace=false,
+	breaklines=true,
+	captionpos=b,
+	keepspaces=true,
+	showspaces=false,
+	showstringspaces=false,
+	showtabs=false,
+	numbers=none,
+	frame=none,
+	tabsize=4,
+	defaultdialect=[LaTeX]Tex,
+}
+\lstset{style=kaolst}
+
+% Verbatim
+%\RequirePackage{fancyvrb} % Customization of verbatim environments
+%\fvset{fontsize=\normalsize} % Change here the font size of all 
+%verbatim \preto{\@verbatim}{\topsep=0pt \partopsep=0pt }
+
+% Algorithms
+\RequirePackage[linesnumbered, ruled, vlined]{algorithm2e} % Algorithms
+
+% Special gliphs
+\RequirePackage{ccicons} % Creative Commons icons
+\RequirePackage{metalogo} % XeTeX logo
+
+% Index, glossary and nomenclature
+\RequirePackage{imakeidx}
+\RequirePackage[xindy,toc,numberedsection=nameref]{glossaries}
+\RequirePackage[intoc]{nomencl}
+
+% Commands to print specific words always in the same way
+% TODO: in \Command, automatically escape braces {} and replace backslashes with \textbackslash
+\newcommand{\Class}[1]{\texttt{#1}}
+\newcommand{\Package}[1]{\texttt{#1}}
+\newcommand{\Option}[1]{\texttt{#1}}
+\newcommand{\Command}[1]{\texttt{\textbackslash#1}}
+\newcommand{\Environment}[1]{\texttt{#1}}
+\newcommand{\Path}[1]{\texttt{#1}}
+
+% Print latin words in italics (The xspace package is required but we already loaded it in the class)
+\newcommand{\hairsp}{\hspace{1pt}} % Command to print a very short space
+\newcommand{\invitro}{\textit{in vitro}\xspace}
+\newcommand{\invivo}{\textit{in vivo}\xspace}
+\newcommand{\cis}{\textit{cis}\xspace}
+\newcommand{\trans}{\textit{trans}\xspace}
+\newcommand{\etal}{\textit{et al.}\xspace}
+\newcommand{\denovo}{\textit{de novo}\xspace}
+\newcommand{\adhoc}{\textit{ad hoc}\xspace}
+\newcommand{\etcetera}{\textit{et cetera}\xspace}
+\newcommand{\etc}{\textit{etc.}\xspace}
+\newcommand{\ie}{\textit{i.\nobreak\hairsp{}e.}\xspace}
+\newcommand{\eg}{\textit{e.\nobreak\hairsp{}g.}\xspace}
+\newcommand{\vs}{\textit{vs}\xspace}
+\newcommand{\cfr}{\textit{cfr.}\xspace}
+
+% Tables
+\newcommand{\na}{\quad--} % Used in tables for N/A cells
+\newcommand{\hangp}[1]{\makebox[0pt][r]{(}#1\makebox[0pt][l]{)}} % Create parentheses around text in tables which take up no horizontal space - this improves column spacing
+\newcommand{\hangstar}{\makebox[0pt][l]{*}} % Create asterisks in tables which take up no horizontal space - this improves column spacing
+
+% A command to print the current month and year (from tufte-latex)
+\newcommand{\monthyear}{\ifcase\month\or January\or February\or March\or 
+April\or May\or June\or July\or August\or September\or October\or 
+November\or December\fi\space\number\year}
