corrected missing references

--- a/tex/chap_high_power_icrf.tex
+++ b/tex/chap_high_power_icrf.tex
@@ -103,7 +103,7 @@ The 2013 panorama of worldwide ICRF system operational domains is illustrated in
 	\label{fig:westicrhcomparaisonothermachines}
 \end{figure*}
 
-All the aspects previously listed led to iterate between RF and mechanical design, with generally opposite constraints and necessary compromises\sidenote{In order to improve the mechanical assembly of the WEST antenna in comparison to the 2007 prototype, the main dimensions changes have been proposed by K.Vulliez, A.Argouarch and P.Mollard for the conceptual design review in 2013 and assessed after from the RF point of view in an internal note \citeauthyear{hillairet2014-1}}. While the ICRF system upgrade for the WEST project also concerned the generator update and the moving of an antenna from port Q5 to port Q4A, this section only focuses on the antenna design. 
+All the aspects previously listed led to iterate between RF and mechanical design, with generally opposite constraints and necessary compromises\sidenote{In order to improve the mechanical assembly of the WEST antenna in comparison to the 2007 prototype, the main dimensions changes have been proposed by K.Vulliez, A.Argouarch and P.Mollard for the conceptual design review in 2013 and assessed after from the RF point of view in an internal note \citeauthyear{hillairet2014}}. While the ICRF system upgrade for the WEST project also concerned the generator update and the moving of an antenna from port Q5 to port Q4A, this section only focuses on the antenna design. 
 
 
 \begin{figure}
