--- a/tex/chap_high_power_lhrf.tex
+++ b/tex/chap_high_power_lhrf.tex
@@ -284,7 +284,7 @@ The maximum and averaged electric fields are plotted on Figure~\ref{fig:iterlhel
 
 % #####################################################
 \subsection{Context}
-The aim of the $\TE_{10}$-$\TE_{30}$ mode converter is to convert an input fundamental Transverse Electric (TE) rectangular mode ($\TE_{10}$) into another rectangular mode (the $\TE_{30}$ mode). This conversion is then used in order to equally split the power into three in an adapted splitter. Such splitting scheme, used in both Tore Supra LH antennas since 1999, is achieved by a perturbation of the waveguide geometry leading to mode coupling. Fundamental input $\TE_{10}$ mode can thus be almost totally converted to the $\TE_{30}$ mode, which ideally distributes the power into three in the H-plane\sidecite{bibet1994, wang2009}. This wall perturbation mode conversion has been used originally on ECRH, where high-order modes are not suitable for long distance transmission and plasma heating \sidecite{thumm1987-1, thumm2002}. 
+The aim of the $\TE_{10}$-$\TE_{30}$ mode converter is to convert an input fundamental Transverse Electric (TE) rectangular mode ($\TE_{10}$) into another rectangular mode (the $\TE_{30}$ mode). This conversion is then used in order to equally split the power into three in an adapted splitter. Such splitting scheme, used in both Tore Supra LH antennas since 1999, is achieved by a perturbation of the waveguide geometry leading to mode coupling. Fundamental input $\TE_{10}$ mode can thus be almost totally converted to the $\TE_{30}$ mode, which ideally distributes the power into three in the H-plane\sidecite{bibet1994, wang2009}. This wall perturbation mode conversion has been used originally on ECRH, where high-order modes are not suitable for long distance transmission and plasma heating \sidecite{thumm1987, thumm2002}. 
 
 Propagation of guided field into small perturbed wall waveguides can be modelled with the Generalized Telegraphist's equation \sidecite{schelkunoff1952, schelkunoff1955, unger1958, solymar1959, buckley1990}. The resulting set of equations can be solved numerically \sidecite{flugel1988,huting1989} or almost analytically with some approximations\sidecite{unger1958, solymar1959}. 
 
