corrected some references and added the cover page

--- a/cover_page/titre.tex
+++ b/cover_page/titre.tex
@@ -19,7 +19,7 @@
   %LABORATOIRE/UNITE DE RECHERCHE\\
   \begin{center}
     \vspace{3.8cm}
-    Th\`ese pr\'esent\'ee pour obtenir\\l'Habilitation \`a Diriger des Recherches\\
+    Habilitation \`a Diriger des Recherches\\
   \end{center}
   \vspace{0.5cm}
 %  Discipline: indiquer la mention du doctorat (intitul\'es en annexe)\\
@@ -40,19 +40,19 @@
 \begin{tabular}{lll}
   Stéphane Heuraux & Professeur des Universit\'es,  Université de Lorraine  & Rapporteur\\
   \vspace{0.08cm}
-  Jeff Ongena  & Expert de Haut Niveau, Ecole Royale Militaire, Bruxelles  & Rapporteur\\
+  Jeff Ongena  & Directeur de Recherche, Ecole Royale Militaire, Bruxelles  & Rapporteur\\
   \vspace{0.08cm}
   Olivier Pascal & Professeur des Universit\'es,  Université de Toulouse & Rapporteur\\
   \vspace{0.08cm}
-  Alain Becoulet & Expert de Haut Niveau, ITER Organization & Examinateur \\
+  Alain Becoulet & Directeur de Recherche, ITER Organization & Examinateur \\
   \vspace{0.08cm}
   Jérôme Sokoloff & Maître de conférence, Université de Toulouse & Examinateur \\ 
   \vspace{0.08cm}
-  Gia-Tuong Hoang & Expert de Haut Niveau, CEA & Examinateur \\  
+  Gia-Tuong Hoang & Directeur de Recherche, CEA & Examinateur \\  
   \vspace{0.08cm}
-  Jean Jacquinot & Expert de Haut Niveau, CEA & Membre invit\'e \\
+  Jean Jacquinot & Directeur de Recherche, CEA & Membre invit\'e \\
   \vspace{0.08cm}
-  Stefan Enoch & Professeur des Universit\'es, Universit\'e d'Aix-Marseille & Tuteur\\
+  Stefan Enoch & Directeur de Recherche, Universit\'e d'Aix-Marseille & Tuteur\\
   
 \end{tabular}
 
