--- a/references.bib
+++ b/references.bib
@@ -6020,6 +6020,16 @@
   language = {en}
 }
 
+@article{de,
+  title = {{{FAST WAVE CURRENT DRIVE SYSTEM DESIGN FOR Dlii}}-{{D}}},
+  author = {{de}, J S and Baity, F W and Ca, R and Hoffma, D J and Petty, C C and Phelps, D R and Pinsker, R I and Remsen, D and Tayl, D J and Arnold, W},
+  pages = {10},
+  abstract = {DIII-D hasa majorefforutnderwaytodevelop the physics and technology of fast wave electron heating and current drive in conjunction with electron cyclotron heating. The present system consists of a four strap antenna driven by one 2 MW transmitter in the 32-60 MHz band. Experiments have been successful in demonstrating the physics of heating and current drive, In order to validate fast wave current drive for future machines a greater power capabiltiy is necessary to drive ali of the plasma current. Advanced tokamak modeling for DIII-D has indicated that this goal can be met for plasma configurations of interest (i.e. high [3 VH-mode discharges)with 8 MW of transmitter fast wave capability. It is proposed that four transmitters drive fast wave antennas at three lot:axiom in DIII-D to provide the power for curent drive and current profile modification. As the next step in acquiring this capability, two modular four strap antennas are in design and the procurement of a high power transmitter in the 30-120 MHz range is in progress. Additionally, innovations in the technology are being investigated, such as the use of a coupled combline antenna to reduce the number of required feedthroughs and to provide for parallel phase velocity variation with a relatively small change in frequency, and the use of fast ferrite tuners to provide millisecond timescale impedance matching. A successful test of a low power fast ferrite prototype was conducted on DIII-D.},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\R73CH4S7\\de et al. - FAST WAVE CURRENT DRIVE SYSTEM DESIGN FOR Dlii-D.pdf},
+  keywords = {⛔ No DOI found},
+  language = {en}
+}
+
 @article{deb1964,
   title = {Breakdown in High Frequency Electrodeless Discharge at Low Pressure in the Presence of a Steady Transverse Magnetic Field},
   author = {Deb, S. and Goswami, S. N.},
@@ -8338,7 +8348,7 @@
 @article{flugel1988,
   title = {Computer-Aided Analysis and Design of Circular Waveguide Tapers},
   author = {Flugel, H. and Kuhn, E.},
-  year = {Feb./1988},
+  year = {1988},
   volume = {36},
   pages = {332--336},
   issn = {00189480},
@@ -8911,6 +8921,19 @@
   keywords = {\#nosource},
   language = {en},
   number = {9}
+}
+
+@article{garrett2021,
+  title = {A {{Dispersion}}-{{Compensated Algorithm}} for the {{Analysis}} of {{Electromagnetic Waveguides}}},
+  author = {Garrett, John Daniel and Tong, Edward},
+  year = {2021},
+  pages = {1--1},
+  issn = {1558-2361},
+  doi = {10/gkgg8f},
+  abstract = {Electromagnetic waveguides have dispersive properties, meaning the phase and group velocities change with frequency. This dispersion leads to broadening in the time-domain impulse response, which can make it difficult to separate adjacent signals if they overlap. To help address this issue, we present a dispersion-compensated algorithm for the analysis of electromagnetic waveguides. This algorithm maps signals measured in the frequency-domain to the distance-domain, and vice versa. It uses a priori information of the waveguide's propagation constant to compensate for dispersion and preserve features in the distance-domain impulse response, even over large distances. The dispersion-compensated algorithm has a variety of applications, including accurate distance-to-fault measurements and highly selective distance-domain windowing. For a simple demonstration, we show how the algorithm can be used to analyze data from a waveguide cavity resonator.},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\C85BXPCU\\Garrett_Tong_2021_A Dispersion-Compensated Algorithm for the Analysis of Electromagnetic.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\AFY9UV25\\9447194.html},
+  journal = {IEEE Signal Processing Letters},
+  keywords = {dispersion compensation,distance-domain analysis,distanceto-fault measurement,Electromagnetic waveguides,Fourier transform}
 }
 
 @book{gascoigne2020,
@@ -20834,7 +20857,7 @@
 @phdthesis{placais2020,
   title = {Mod\'elisation et Mesures de l'\'emission Secondaire de Di\'electriques et Des Ph\'enom\`enes Multipactor En Pr\'esence de Champ Magn\'etique Pour La Fusion Nucl\'eaire Contr\^ol\'ee et Le Spatial},
   author = {Placais, Adrien},
-  year = {2020 (tbc)},
+  year = {2020},
   file = {C\:\\Users\\JH218595\\Zotero\\storage\\KPFJ9K53\\Placais_2020_Modélisation et mesures de l’émission secondaire de diélectriques et des.pdf},
   keywords = {\#nosource},
   school = {Institut Sup\'erieur de l'A\'eronautique et de l'Espace ; Universit\'e Toulouse}
@@ -28218,6 +28241,13 @@
   title = {Scopus - {{Document}} Details - {{RF}} Network Analysis of the {{WEST TWA}} Mock-up in {{TITAN}} | {{Signed}} In},
   file = {C\:\\Users\\JH218595\\Zotero\\storage\\CJ75R59D\\display.html},
   howpublished = {https://www.scopus.com/record/display.uri?eid=2-s2.0-85105563015\&origin=resultslist\&sort=plf-f\&src=s\&sid=4c5a99287323cb13acea81ce3f92658f\&sot=b\&sdt=b\&sl=26\&s=ALL\%28\%22scikit-rf\%22+OR+\%22skrf\%22\%29\&relpos=0\&citeCnt=0\&searchTerm=\&featureToggles=FEATURE\_NEW\_MAIN\_SECTION:1,FEATURE\_NEW\_SOURCE\_INFO:1,FEATURE\_NEW\_REAXYS\_SECTION:1,FEATURE\_NEW\_SCIVAL\_TOPICS:1,FEATURE\_VIEWS\_COUNT:1}
+}
+
+@techreport{zotero-10302,
+  title = {De-{{Embedding}} and {{Embedding S}}-{{Parameter Networks Using}} a {{Vector Network Analyzer}}},
+  pages = {30},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\W5L88NAY\\De-Embedding and Embedding S-Parameter Networks Us.pdf},
+  language = {en}
 }
 
 @book{zotero-189,
